--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "bogdan.oblapenko@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
     "autoload": {
       "psr-4": {
 	"App\\": "../application/"
